added enctype in form

--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,7 @@ input[readonly] {
 </style>
 <div class="jumbotron text-center" style="background-color: #ffffff">
     <div class="card">
-        <form action="http://127.0.0.1:5000/uploader" method="POST">
+        <form action="http://127.0.0.1:5000/uploader" method="POST" enctype = "multipart/form-data">
             <input type="file" class="form-control" name="file1">
             <input type="file" class="form-control" name="file2"/>
 
