added static folder & css : circular progress bar

--- a/templates/result.html
+++ b/templates/result.html
@@ -3,5 +3,9 @@
 {% block body %}
     <div class="jumbotron text-center" style="background-color: #ffffff">
         {{match}}
+
+        
+        {% include 'includes/_circular_progressbar.html'%}
     </div>
+
 {% endblock %}
