--- a/templates/includes/_circular_progressbar.html
+++ b/templates/includes/_circular_progressbar.html
@@ -6,7 +6,7 @@
                 a 15.9155 15.9155 0 0 1 0 31.831
                 a 15.9155 15.9155 0 0 1 0 -31.831" />
             <path class="circle"
-                  stroke-dasharray="34, 100"
+                  stroke-dasharray="{{match}}, 100"
                   d="M18 2.0845
                 a 15.9155 15.9155 0 0 1 0 31.831
                 a 15.9155 15.9155 0 0 1 0 -31.831" />
