--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{{url_for('static',filename='css/home.css')}}"/>
 <div class="jumbotron text-center" style="background-color: #ffffff">
     <div class="card">
-        <form action="http://127.0.0.1:5000/uploader" method="POST" enctype = "multipart/form-data">
+        <form action="https://docmatch.herokuapp.com/uploader" method="POST" enctype = "multipart/form-data">
             <input type="file" class="form-control" name="file1">
             <input type="file" class="form-control" name="file2"/>
 
